@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.039.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.040.
 use strict;
 use warnings;
 
@@ -7,7 +7,7 @@ use 5.006;
 use ExtUtils::MakeMaker;
 
 my %WriteMakefileArgs = (
-  "ABSTRACT" => "Event emitter role for Moo(se) classes",
+  "ABSTRACT" => "Event emitter role",
   "AUTHOR" => "Dan Book <dbook\@cpan.org>",
   "CONFIGURE_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0
@@ -17,15 +17,13 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Role::EventEmitter",
   "PREREQ_PM" => {
-    "Moo::Role" => "2.000002",
-    "Scalar::Util" => 0,
-    "constant" => 0
+    "Role::Tiny" => "2.000001",
+    "Scalar::Util" => 0
   },
   "TEST_REQUIRES" => {
-    "Moo" => "2.000002",
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.001",
+  "VERSION" => "0.002",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -33,11 +31,9 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "Moo" => "2.000002",
-  "Moo::Role" => "2.000002",
+  "Role::Tiny" => "2.000001",
   "Scalar::Util" => 0,
-  "Test::More" => "0.88",
-  "constant" => 0
+  "Test::More" => "0.88"
 );
 
 
