@@ -1,6 +1,4 @@
 requires 'perl' => '5.006';
-requires 'constant';
-requires 'Moo::Role' => '2.000002';
+requires 'Role::Tiny' => '2.000001';
 requires 'Scalar::Util';
-test_requires 'Moo'        => '2.000002';
 test_requires 'Test::More' => '0.88';
