@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Switch to Role::Tiny based role as attribute is not needed
 
 0.001     2015-08-10 15:44:08 EDT
   - First release
